Retail Lending-Production/src/objects/Commission_Setting__c.object
<CustomObject>
    <fields>
        <fullName>Achieved_for_Current_Month__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Achieved for Current Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Achievement_Criteria__c</fullName>
        <formula>if(ispickval(Achievement__c,&apos;Payment on Slab Achievement&apos;) &amp;&amp; ispickval(Commission_paid_on__c,&apos;Flat Pay&apos;) &amp;&amp; ispickval(Commission_paid_on_2__c,&apos;Amount&apos;) &amp;&amp; ispickval(Commission_based_on__c,&apos;Disbursement&apos;), 1, if(ispickval(Achievement__c,&apos;Payment on Slab Achievement&apos;) &amp;&amp; ispickval(Commission_paid_on__c,&apos;Flat Pay&apos;) &amp;&amp; ispickval(Commission_paid_on_2__c,&apos;%ge&apos;) &amp;&amp; ispickval(Commission_based_on__c,&apos;Disbursement&apos;), 2, if(ispickval(Achievement__c,&apos;Payment on Slab Achievement&apos;) &amp;&amp; ispickval(Commission_paid_on__c,&apos;Flat Pay&apos;) &amp;&amp; ispickval(Commission_paid_on_2__c,&apos;Amount&apos;) &amp;&amp; ispickval(Commission_based_on__c,&apos;Revenue&apos;), 3, if(ispickval(Achievement__c,&apos;Payment on Slab Achievement&apos;) &amp;&amp; ispickval(Commission_paid_on__c,&apos;Flat Pay&apos;) &amp;&amp; ispickval(Commission_paid_on_2__c,&apos;%ge&apos;) &amp;&amp; ispickval(Commission_based_on__c,&apos;Revenue&apos;), 4, 
if(ispickval(Achievement__c,&apos;Payment With in the Slab Range&apos;) &amp;&amp; ispickval(Commission_paid_on__c,&apos;Flat Pay&apos;) &amp;&amp; ispickval(Commission_paid_on_2__c,&apos;Amount&apos;) &amp;&amp; ispickval(Commission_based_on__c,&apos;Disbursement&apos;),5,
if(ispickval(Achievement__c,&apos;Payment With in the Slab Range&apos;) &amp;&amp; ispickval(Commission_paid_on__c,&apos;Flat Pay&apos;) &amp;&amp; ispickval(Commission_paid_on_2__c,&apos;%ge&apos;) &amp;&amp; ispickval(Commission_based_on__c,&apos;Disbursement&apos;),6,
if(ispickval(Achievement__c,&apos;Payment With in the Slab Range&apos;) &amp;&amp; ispickval(Commission_paid_on__c,&apos;Flat Pay&apos;) &amp;&amp; ispickval(Commission_paid_on_2__c,&apos;Amount&apos;) &amp;&amp; ispickval(Commission_based_on__c,&apos;Revenue&apos;),7,
if(ispickval(Achievement__c,&apos;Payment With in the Slab Range&apos;) &amp;&amp; ispickval(Commission_paid_on__c,&apos;Flat Pay&apos;) &amp;&amp; ispickval(Commission_paid_on_2__c,&apos;%ge&apos;) &amp;&amp; ispickval(Commission_based_on__c,&apos;Revenue&apos;),8,
if(ispickval(Achievement__c,&apos;Payment on Slab Achievement&apos;) &amp;&amp; ispickval(Commission_paid_on__c,&apos;Incremental&apos;) &amp;&amp; ispickval(Commission_paid_on_2__c,&apos;Amount&apos;) &amp;&amp; ispickval(Commission_based_on__c,&apos;Disbursement&apos;),9,
if(ispickval(Achievement__c,&apos;Payment on Slab Achievement&apos;) &amp;&amp; ispickval(Commission_paid_on__c,&apos;Incremental&apos;) &amp;&amp; ispickval(Commission_paid_on_2__c,&apos;%ge&apos;) &amp;&amp; ispickval(Commission_based_on__c,&apos;Disbursement&apos;),10,
if(ispickval(Achievement__c,&apos;Payment on Slab Achievement&apos;) &amp;&amp; ispickval(Commission_paid_on__c,&apos;Incremental&apos;) &amp;&amp; ispickval(Commission_paid_on_2__c,&apos;Amount&apos;) &amp;&amp; ispickval(Commission_based_on__c,&apos;Revenue&apos;),11,
if(ispickval(Achievement__c,&apos;Payment on Slab Achievement&apos;) &amp;&amp; ispickval(Commission_paid_on__c,&apos;Incremental&apos;) &amp;&amp; ispickval(Commission_paid_on_2__c,&apos;%ge&apos;) &amp;&amp; ispickval(Commission_based_on__c,&apos;Revenue&apos;),12,
if(ispickval(Achievement__c,&apos;Payment With in the Slab Range&apos;) &amp;&amp; ispickval(Commission_paid_on__c,&apos;Incremental&apos;) &amp;&amp;ispickval(Commission_paid_on_2__c,&apos;Amount&apos;) &amp;&amp; ispickval(Commission_based_on__c,&apos;Disbursement&apos;),13,
if(ispickval(Achievement__c,&apos;Payment With in the Slab Range&apos;) &amp;&amp; ispickval(Commission_paid_on__c,&apos;Incremental&apos;) &amp;&amp;ispickval(Commission_paid_on_2__c,&apos;%ge&apos;) &amp;&amp; ispickval(Commission_based_on__c,&apos;Disbursement&apos;),14,
if(ispickval(Achievement__c,&apos;Payment With in the Slab Range&apos;) &amp;&amp; ispickval(Commission_paid_on__c,&apos;Incremental&apos;) &amp;&amp;ispickval(Commission_paid_on_2__c,&apos;Amount&apos;) &amp;&amp; ispickval(Commission_based_on__c,&apos;Revenue&apos;),15,
if(ispickval(Achievement__c,&apos;Payment With in the Slab Range&apos;) &amp;&amp; ispickval(Commission_paid_on__c,&apos;Incremental&apos;) &amp;&amp;ispickval(Commission_paid_on_2__c,&apos;%ge&apos;) &amp;&amp; ispickval(Commission_based_on__c,&apos;Revenue&apos;),16,0
))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Achievement Criteria</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Achievement__c</fullName>
        <label>Achievement Payment</label>
        <picklist>
            <picklistValues>
                <fullName>Payment on Slab Achievement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment With in the Slab Range</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount_Paid_on_Inc_Ran__c</fullName>
        <description>These field is used for Incremental slab Range Amount in disbursement and revenue generated</description>
        <inlineHelpText>Amount Paid for slab on Incremental-&gt; Slab Range-&gt;Amount-&gt;Disbursement &amp; Revenue Generated Per 100-?</inlineHelpText>
        <label>Amount Paid on Inc/Ran</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_for_FPSlabAch__c</fullName>
        <formula>if( Amount_for_Slab_Comparison__c &gt;=Max_Slab1__c &amp;&amp; Amount_for_Slab_Comparison__c&lt; Max_Slab2__c, Max_Slab1__c , if( Amount_for_Slab_Comparison__c &gt;=Max_Slab2__c &amp;&amp; Amount_for_Slab_Comparison__c&lt; Max_Slab3__c, Max_Slab2__c ,if( Amount_for_Slab_Comparison__c&gt;=Max_Slab3__c &amp;&amp; Amount_for_Slab_Comparison__c&lt; Max_Slab4__c, Max_Slab3__c , if( Amount_for_Slab_Comparison__c &gt;=Max_Slab4__c &amp;&amp; Amount_for_Slab_Comparison__c &lt; Max_Slab5__c, Max_Slab4__c , if( Amount_for_Slab_Comparison__c &gt;=Max_Slab5__c &amp;&amp; Amount_for_Slab_Comparison__c&lt; Max_Slab6__c, Max_Slab5__c ,Max_Slab6__c  )))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount for FPSlabAch</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_for_FPSlabRan__c</fullName>
        <formula>Amount_for_Slab_Comparison__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount for FPSlabRan</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_for_Slab_Comparison__c</fullName>
        <description>This takes the amount of the Disbursement to compare with the Slab</description>
        <label>Amount for Slab Comparison</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apr_Achievement__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Apr Rev Achievement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apr_DB__c</fullName>
        <label>Apr DB</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apr_Disb_Based__c</fullName>
        <formula>if(and(month(today())=4,ispickval(Commission_paid_on__c,&apos;Flat Pay&apos;), ispickval( Commission_paid_on_2__c, &apos;%ge&apos;), ispickval( Commission_based_on__c, &apos;Disbursement&apos;)), Apr_Disbursement__c * (Commission_value_for_Calculation__c /100), if(and(month(today())=4, ispickval(Commission_paid_on__c,&apos;Flat Pay&apos;), ispickval( Commission_paid_on_2__c, &apos;Amount&apos;), ispickval( Commission_based_on__c, &apos;Disbursement&apos;)), Commission_value_for_Calculation__c,0 ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Apr (Disb Based)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apr_Disbursement__c</fullName>
        <label>Apr Disbursement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apr_RB__c</fullName>
        <label>Apr RB</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apr_Rev_Based__c</fullName>
        <formula>if(and(month(today())=4,ispickval(Commission_paid_on__c,&apos;Flat Pay&apos;), ispickval( Commission_paid_on_2__c, &apos;%ge&apos;), ispickval( Commission_based_on__c, &apos;Revenue Generated&apos;)),  Apr_Achievement__c  * (Commission_value_for_Calculation__c /100), if(and(month(today())=4, ispickval(Commission_paid_on__c,&apos;Flat Pay&apos;), ispickval( Commission_paid_on_2__c, &apos;Amount&apos;), ispickval( Commission_based_on__c, &apos;Revenue Generated&apos;)), Commission_value_for_Calculation__c,0 ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Apr (Rev Based)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Aug_Achievement__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Aug Rev Achievement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aug_DB__c</fullName>
        <label>Aug DB</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Aug_Disb__c</fullName>
        <formula>if(and(month(today())=8,ispickval(Commission_paid_on__c,&apos;Flat Pay&apos;), ispickval( Commission_paid_on_2__c, &apos;%ge&apos;), ispickval(  Commission_based_on__c, &apos;Disbursement&apos;)), Aug_Disbursement__c * (Commission_value_for_Calculation__c /100), if(and(month(today())=8, ispickval(Commission_paid_on__c,&apos;Flat Pay&apos;), ispickval( Commission_paid_on_2__c, &apos;Amount&apos;), ispickval( Commission_based_on__c, &apos;Disbursement&apos;)), Commission_value_for_Calculation__c,0 ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aug (Disb Based)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Aug_Disbursement__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Aug Disbursement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aug_RB__c</fullName>
        <label>Aug RB</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Aug_Rev_Based__c</fullName>
        <formula>if(and(month(today())=8,ispickval(Commission_paid_on__c,&apos;Flat Pay&apos;), ispickval( Commission_paid_on_2__c, &apos;%ge&apos;), ispickval( Commission_based_on__c, &apos;Revenue Generated&apos;)),  Aug_Achievement__c  * (Commission_value_for_Calculation__c /100), if(and(month(today())=8, ispickval(Commission_paid_on__c,&apos;Flat Pay&apos;), ispickval( Commission_paid_on_2__c, &apos;Amount&apos;), ispickval( Commission_based_on__c, &apos;Revenue Generated&apos;)), Commission_value_for_Calculation__c,0 ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aug (Rev Based)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Cut_Off_Percent__c</fullName>
        <label>Commission Cut Off Percent</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Commission_For_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Commission For Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Commission_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Commission_Type__c</fullName>
        <label>Commission Type</label>
        <picklist>
            <picklistValues>
                <fullName>Regular</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>One Off</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Commission_based_on__c</fullName>
        <inlineHelpText>Commission Based on Eg: &apos;Revenue Generated / Disbursement&apos;</inlineHelpText>
        <label>Commission based on</label>
        <picklist>
            <picklistValues>
                <fullName>Disbursement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revenue Generated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Commission_for_Bank__c</fullName>
        <description>To return Bank percentage on to the opportunity we are using this field</description>
        <formula>if(ispickval( Achievement__c ,&apos;Payment on Slab Achievement&apos;),FPSlabAch__c,
if(ispickval( Achievement__c,&apos;Payment With in the Slab Range&apos;),FPSlabRan__c,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commission % for Bank</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Commission_from1_Bank__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Commission from Bank</label>
        <referenceTo>Bank_Rates__c</referenceTo>
        <relationshipLabel>Achievement Settings</relationshipLabel>
        <relationshipName>Achievement_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Commission_from_Bank__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Commission from Bank</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Achievement Settings</relationshipLabel>
        <relationshipName>Achievement_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Commission_paid_on_2__c</fullName>
        <label>Commission paid on basis</label>
        <picklist>
            <picklistValues>
                <fullName>%ge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amount</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Commission_paid_on__c</fullName>
        <label>Commission paid on</label>
        <picklist>
            <picklistValues>
                <fullName>Flat Pay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cumulative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incremental</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Commission_value_for_Calculation__c</fullName>
        <formula>if(ispickval(Achievement__c,&apos;Payment on Slab Achievement&apos;),
if( Amount_for_Slab_Comparison__c &lt;= max(Max_Slab1__c, Max_Slab2__c),  Slab1_Commission__c,
if( Amount_for_Slab_Comparison__c &lt;=max( Max_Slab2__c,Max_Slab3__c), 
Slab2_Commission__c, 
if( Amount_for_Slab_Comparison__c &lt;=max( Max_Slab3__c, Max_Slab4__c),  
Slab3_Commission__c ,
 if( Amount_for_Slab_Comparison__c  &lt;=max(  Max_Slab4__c  ,Max_Slab5__c),  
Slab4_Commission__c , 
if( Amount_for_Slab_Comparison__c &lt;=max( Max_Slab5__c ,Max_Slab6__c),  
Slab5_Commission__c , Slab6_Commission__c))))),
if(ispickval( Achievement__c, &apos;Payment With in the Slab Range&apos;),
if((Amount_for_Slab_Comparison__c&gt;=Min_Slab1__c&amp;&amp;Amount_for_Slab_Comparison__c&lt;=Max_Slab1__c),
Slab1_Commission__c,
if((Amount_for_Slab_Comparison__c&gt;=Min_Slab2__c&amp;&amp;Amount_for_Slab_Comparison__c&lt;=Max_Slab2__c),
Slab2_Commission__c,
if((Amount_for_Slab_Comparison__c&gt;=Min_Slab3__c&amp;&amp;Amount_for_Slab_Comparison__c&lt;=Max_Slab3__c),
Slab3_Commission__c,
if((Amount_for_Slab_Comparison__c&gt;=Min_Slab4__c&amp;&amp;Amount_for_Slab_Comparison__c&lt;=Max_Slab4__c),
Slab4_Commission__c,
if((Amount_for_Slab_Comparison__c&gt;=Min_Slab5__c&amp;&amp;Amount_for_Slab_Comparison__c&lt;=Max_Slab5__c),
Slab5_Commission__c,Slab6_Commission__c))))),0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commission value for Calculation</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dec_Achievement__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Dec Rev Achievement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dec_DB_Cum__c</fullName>
        <formula>if(and(month(today())=12,ispickval(Commission_paid_on__c,&apos;Cumulative&apos;), ispickval( Commission_paid_on_2__c, &apos;%ge&apos;), ispickval( Commission_based_on__c, &apos;Disbursement&apos;)), if((Dec_Disbursement__c&gt;Min_Slab1__c) &amp;&amp; (Dec_Disbursement__c&lt;=Max_Slab1__c), Dec_Disbursement__c * (Slab1_Commission__c /100), if((Dec_Disbursement__c&gt;=Min_Slab2__c) &amp;&amp; (Dec_Disbursement__c&lt;=Max_Slab2__c), (Max_Slab1__c * (Slab1_Commission__c /100))+(Dec_Disbursement__c-Max_Slab1__c)*(Slab2_Commission__c/100), if((Dec_Disbursement__c&gt;=Min_Slab3__c) &amp;&amp; (Dec_Disbursement__c&lt;=Max_Slab3__c), (Max_Slab1__c * (Slab1_Commission__c /100))+(Max_Slab2__c * (Slab2_Commission__c /100))+(Dec_Disbursement__c-Max_Slab3__c)*(Slab3_Commission__c/100),if((Dec_Disbursement__c&gt;=Min_Slab4__c) &amp;&amp; (Dec_Disbursement__c&lt;=Max_Slab4__c), (Max_Slab1__c * (Slab1_Commission__c /100))+(Max_Slab2__c * (Slab2_Commission__c /100))+(Max_Slab3__c * (Slab3_Commission__c /100))+(Dec_Disbursement__c-Max_Slab4__c)*(Slab4_Commission__c/100),if((Dec_Disbursement__c&gt;=Min_Slab5__c) &amp;&amp; (Dec_Disbursement__c&lt;=Max_Slab5__c), (Max_Slab1__c * (Slab1_Commission__c /100))+(Max_Slab2__c * (Slab2_Commission__c /100))+(Max_Slab3__c * (Slab3_Commission__c /100))+(Max_Slab4__c * (Slab4_Commission__c /100))+(Dec_Disbursement__c-Max_Slab5__c)*(Slab5_Commission__c/100),if((Dec_Disbursement__c&gt;=Min_Slab6__c) &amp;&amp; (Dec_Disbursement__c&lt;=Max_Slab6__c), (Max_Slab1__c * (Slab1_Commission__c /100))+(Max_Slab2__c * (Slab2_Commission__c /100))+(Max_Slab3__c * (Slab3_Commission__c /100))+(Max_Slab4__c * (Slab4_Commission__c /100))+(Max_Slab5__c * (Slab5_Commission__c /100))+(Dec_Disbursement__c-Max_Slab6__c)*(Slab6_Commission__c/100),1111111)))))),101)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dec DB Cum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dec_DB__c</fullName>
        <label>Dec DB</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dec_Disb_Based__c</fullName>
        <formula>if(and(month(today())=12,ispickval(Commission_paid_on__c,&apos;Flat Pay&apos;), ispickval( Commission_paid_on_2__c, &apos;%ge&apos;), ispickval(  Commission_based_on__c, &apos;Disbursement&apos;),ispickval( Achievement__c ,&apos;Payment With in the Slab Range&apos;)), Dec_Disbursement__c * (Commission_value_for_Calculation__c /100), if(and(month(today())=12, ispickval(Commission_paid_on__c,&apos;Flat Pay&apos;), ispickval( Commission_paid_on_2__c, &apos;Amount&apos;), ispickval( Commission_based_on__c, &apos;Disbursement&apos;)), Commission_value_for_Calculation__c,0 ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dec (Disb Based)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dec_Disbursement__c</fullName>
        <label>Dec Disbursement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dec_RB__c</fullName>
        <label>Dec RB</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dec_Rev_Disb__c</fullName>
        <formula>if(and(month(today())=12,ispickval(Commission_paid_on__c,&apos;Flat Pay&apos;), ispickval( Commission_paid_on_2__c, &apos;%ge&apos;), ispickval( Commission_based_on__c, &apos;Revenue Generated&apos;)),  Dec_Achievement__c  * (Commission_value_for_Calculation__c /100), if(and(month(today())=12, ispickval(Commission_paid_on__c,&apos;Flat Pay&apos;), ispickval( Commission_paid_on_2__c, &apos;Amount&apos;), ispickval( Commission_based_on__c, &apos;Revenue Generated&apos;)), Commission_value_for_Calculation__c,0 ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dec (Rev Based)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dec__c</fullName>
        <label>Dec</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FPSlabAch__c</fullName>
        <description>This field checks for the monthly slab the Monthly Disbursement is falling under and Returns that particular Slab commission</description>
        <formula>if(  Amount_for_Slab_Comparison__c  &gt;=Max_Slab1__c &amp;&amp; Amount_for_Slab_Comparison__c&lt; Max_Slab2__c, Slab1_Commission__c, if( Amount_for_Slab_Comparison__c &gt;=Max_Slab2__c &amp;&amp; Amount_for_Slab_Comparison__c&lt; Max_Slab3__c, Slab2_Commission__c,if( Amount_for_Slab_Comparison__c &gt;=Max_Slab3__c &amp;&amp; Amount_for_Slab_Comparison__c&lt; Max_Slab4__c, Slab3_Commission__c, if( Amount_for_Slab_Comparison__c &gt;=Max_Slab4__c &amp;&amp; Amount_for_Slab_Comparison__c&lt; Max_Slab5__c, Slab4_Commission__c, if( Amount_for_Slab_Comparison__c &gt;=Max_Slab5__c &amp;&amp; Amount_for_Slab_Comparison__c &lt; Max_Slab6__c, Slab5_Commission__c,Slab6_Commission__c )))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FPSlabAch</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPSlabRan__c</fullName>
        <formula>if( Amount_for_Slab_Comparison__c &gt;=Min_Slab1__c &amp;&amp; Amount_for_Slab_Comparison__c &lt;= Max_Slab1__c, Slab1_Commission__c, if( Amount_for_Slab_Comparison__c &gt;=Min_Slab2__c &amp;&amp; Amount_for_Slab_Comparison__c&lt;= Max_Slab2__c, Slab2_Commission__c,if( Amount_for_Slab_Comparison__c &gt;=Min_Slab3__c &amp;&amp; Amount_for_Slab_Comparison__c&lt;= Max_Slab3__c, Slab3_Commission__c, if( Amount_for_Slab_Comparison__c &gt;=Min_Slab4__c &amp;&amp; Amount_for_Slab_Comparison__c&lt;= Max_Slab4__c, Slab4_Commission__c, if( Amount_for_Slab_Comparison__c &gt;=Min_Slab5__c &amp;&amp; Amount_for_Slab_Comparison__c &lt;= Max_Slab5__c, Slab5_Commission__c,if( Amount_for_Slab_Comparison__c &gt;=Min_Slab6__c &amp;&amp; Amount_for_Slab_Comparison__c &lt;= Max_Slab6__c, Slab5_Commission__c,0))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FPSlabRan</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Feb_Achievement__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Feb Rev Achievement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Feb_DB__c</fullName>
        <label>Feb DB</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Feb_Disb_Based__c</fullName>
        <formula>if(and(month(today())=2,ispickval(Commission_paid_on__c,&apos;Flat Pay&apos;), ispickval( Commission_paid_on_2__c, &apos;%ge&apos;), ispickval( Commission_based_on__c, &apos;Disbursement&apos;)), Feb_Disbursement__c * (Commission_value_for_Calculation__c /100), if(and(month(today())=2, ispickval(Commission_paid_on__c,&apos;Flat Pay&apos;), ispickval( Commission_paid_on_2__c, &apos;Amount&apos;), ispickval( Commission_based_on__c, &apos;Disbursement&apos;)), Commission_value_for_Calculation__c,0 ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Feb (Disb Based)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Feb_Disbursement__c</fullName>
        <label>Feb Disbursement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Feb_RB__c</fullName>
        <label>Feb RB</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Feb_Rev_Based__c</fullName>
        <formula>if(and(month(today())=2,ispickval(Commission_paid_on__c,&apos;Flat Pay&apos;), ispickval( Commission_paid_on_2__c, &apos;%ge&apos;), ispickval( Commission_based_on__c, &apos;Revenue Generated&apos;)),  Feb_Achievement__c * (Commission_value_for_Calculation__c /100), if(and(month(today())=2, ispickval(Commission_paid_on__c,&apos;Flat Pay&apos;), ispickval( Commission_paid_on_2__c, &apos;Amount&apos;), ispickval( Commission_based_on__c, &apos;Revenue Generated&apos;)), Commission_value_for_Calculation__c,0 ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Feb (Rev Based)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Financial_Year1__c</fullName>
        <label>Financial Year(n)</label>
        <picklist>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Financial_Year__c</fullName>
        <label>Financial Year</label>
        <picklist>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IncSlabAch_Amount__c</fullName>
        <formula>if(ispickval(Commission_paid_on_2__c,&apos;Amount&apos;) &amp;&amp; ispickval(Commission_paid_on__c, &apos;Incremental&apos;),
if(Amount_for_Slab_Comparison__c &gt;=Max_Slab1__c &amp;&amp; Amount_for_Slab_Comparison__c&lt; Max_Slab2__c, Slab1_Commission__c,
if( Amount_for_Slab_Comparison__c &gt;=Max_Slab2__c &amp;&amp; Amount_for_Slab_Comparison__c&lt; Max_Slab3__c,
Slab1_Commission__c+Slab2_Commission__c,
if( Amount_for_Slab_Comparison__c &gt;=Max_Slab3__c &amp;&amp; Amount_for_Slab_Comparison__c&lt; Max_Slab4__c,
Slab1_Commission__c+Slab2_Commission__c+ Slab3_Commission__c,
if( Amount_for_Slab_Comparison__c &gt;=Max_Slab4__c &amp;&amp; Amount_for_Slab_Comparison__c&lt; Max_Slab5__c,
Slab1_Commission__c+Slab2_Commission__c+Slab3_Commission__c+Slab4_Commission__c,
if( Amount_for_Slab_Comparison__c &gt;=Max_Slab5__c &amp;&amp; Amount_for_Slab_Comparison__c &lt; Max_Slab6__c,
Slab1_Commission__c+Slab2_Commission__c+Slab3_Commission__c+Slab4_Commission__c+Slab5_Commission__c,
if( Amount_for_Slab_Comparison__c &gt;=Max_Slab6__c,
Slab1_Commission__c+ Slab2_Commission__c+ Slab3_Commission__c+Slab4_Commission__c+Slab5_Commission__c+Slab5_Commission__c+Slab6_Commission__c,0)

)
)
)
)
)
,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IncSlabAch Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IncSlabAch_ge__c</fullName>
        <formula>if(ispickval(Commission_paid_on_2__c,&apos;%ge&apos;) &amp;&amp; ispickval(Commission_paid_on__c, &apos;Incremental&apos;),

if(Amount_for_Slab_Comparison__c &gt;=Max_Slab1__c &amp;&amp; Amount_for_Slab_Comparison__c&lt; Max_Slab2__c,
 Max_Slab1__c*(Slab1_Commission__c/100), 

if( Amount_for_Slab_Comparison__c &gt;=Max_Slab2__c &amp;&amp; Amount_for_Slab_Comparison__c&lt; Max_Slab3__c, 
(Max_Slab1__c*(Slab1_Commission__c/100))+((Max_Slab2__c-Max_Slab1__c)*(Slab2_Commission__c/100)), 

if( Amount_for_Slab_Comparison__c &gt;=Max_Slab3__c &amp;&amp; Amount_for_Slab_Comparison__c&lt; Max_Slab4__c, 
(Max_Slab1__c*(Slab1_Commission__c/100))+((Max_Slab2__c-Max_Slab1__c)*(Slab2_Commission__c/100))+ 
((Max_Slab3__c-Max_Slab2__c)*(Slab3_Commission__c/100)),

if( Amount_for_Slab_Comparison__c &gt;=Max_Slab4__c &amp;&amp; Amount_for_Slab_Comparison__c&lt; Max_Slab5__c,
(Max_Slab1__c*(Slab1_Commission__c/100))+ ((Max_Slab2__c-Max_Slab1__c)*(Slab2_Commission__c/100))+ 
((Max_Slab3__c-Max_Slab2__c)*(Slab3_Commission__c/100))+((Max_Slab4__c-Max_Slab3__c)*(Slab4_Commission__c/100)), 

if( Amount_for_Slab_Comparison__c &gt;=Max_Slab5__c &amp;&amp; Amount_for_Slab_Comparison__c &lt; Max_Slab6__c, 
(Max_Slab1__c*(Slab1_Commission__c/100))+ ((Max_Slab2__c-Max_Slab1__c)*(Slab2_Commission__c/100))+ 
((Max_Slab3__c-Max_Slab2__c)*(Slab3_Commission__c/100))+((Max_Slab4__c-Max_Slab3__c)*(Slab4_Commission__c/100))+
((Max_Slab5__c-Max_Slab4__c)*(Slab5_Commission__c/100)),
 
if( Amount_for_Slab_Comparison__c &gt;=Max_Slab6__c, 
(Max_Slab1__c*(Slab1_Commission__c/100))+ ((Max_Slab2__c-Max_Slab1__c)*(Slab2_Commission__c/100))+ 
((Max_Slab3__c-Max_Slab2__c)*(Slab3_Commission__c/100))+((Max_Slab4__c-Max_Slab3__c)*(Slab4_Commission__c/100))+
((Max_Slab5__c-Max_Slab4__c)*(Slab5_Commission__c/100))+((Max_Slab6__c-Max_Slab5__c)*(Slab6_Commission__c/100)),0)

))))),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IncSlabAch %ge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IncSlabRan_Amount__c</fullName>
        <formula>if(ispickval(Commission_paid_on_2__c,&apos;Amount&apos;) &amp;&amp; ispickval(Commission_paid_on__c, &apos;Incremental&apos;),

if(Amount_for_Slab_Comparison__c &gt;=Min_Slab1__c &amp;&amp; Amount_for_Slab_Comparison__c &lt;= Max_Slab1__c, Slab1_Commission__c*(Amount_for_FPSlabRan__c/100000),

if( Amount_for_Slab_Comparison__c &gt;=Min_Slab2__c &amp;&amp; Amount_for_Slab_Comparison__c&lt;= Max_Slab2__c,
( (Max_Slab1__c/100000)* Slab1_Commission__c)+((Amount_for_FPSlabRan__c-Max_Slab1__c)/100000)*Slab2_Commission__c,

if( Amount_for_Slab_Comparison__c &gt;=Min_Slab3__c &amp;&amp; Amount_for_Slab_Comparison__c&lt;= Max_Slab3__c,
(Slab1_Commission__c* (Max_Slab1__c/100000))+(((Max_Slab2__c-Max_Slab1__c)/100000)*Slab2_Commission__c)+(((Amount_for_FPSlabRan__c-Max_Slab2__c)/100000)*Slab3_Commission__c),

if( Amount_for_Slab_Comparison__c &gt;=Min_Slab4__c &amp;&amp; Amount_for_Slab_Comparison__c&lt;= Max_Slab4__c,
(Slab1_Commission__c* (Max_Slab1__c/100000))+(((Max_Slab2__c-Max_Slab1__c)/100000)*Slab2_Commission__c)+(((Max_Slab3__c-Max_Slab2__c)/100000)*Slab3_Commission__c)+(((Amount_for_FPSlabRan__c-Max_Slab3__c)/100000)*Slab4_Commission__c),

if(Amount_for_Slab_Comparison__c &gt;=Min_Slab5__c &amp;&amp; Amount_for_Slab_Comparison__c &lt;= Max_Slab5__c,
(Slab1_Commission__c* (Max_Slab1__c/100000))+(((Max_Slab2__c-Max_Slab1__c)/100000)*Slab2_Commission__c)+(((Max_Slab3__c-Max_Slab2__c)/100000)*Slab3_Commission__c)+(((Max_Slab4__c-Max_Slab3__c)/100000)*Slab4_Commission__c)+(((Amount_for_FPSlabRan__c-Max_Slab4__c)/100000)*Slab5_Commission__c),

if(Amount_for_Slab_Comparison__c &gt;=Min_Slab6__c &amp;&amp; Amount_for_Slab_Comparison__c &lt;= Max_Slab6__c,
(Slab1_Commission__c* (Max_Slab1__c/100000))+(((Max_Slab2__c-Max_Slab1__c)/100000)*Slab2_Commission__c)+(((Max_Slab3__c-Max_Slab2__c)/100000)*Slab3_Commission__c)+(((Max_Slab4__c-Max_Slab3__c)/100000)*Slab4_Commission__c)
+(((Max_Slab5__c-Max_Slab4__c)/100000)*Slab5_Commission__c)
+(((Amount_for_FPSlabRan__c-Max_Slab5__c)/100000)*Slab6_Commission__c),0)
))))),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IncSlabRan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>